--- a/index.html
+++ b/index.html
@@ -1,60 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TODO List PWA</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="manifest" href="manifest.json">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Login</title>
 </head>
-
 <body>
+  <div class="container">
 
-    <!-- Splash Screen -->
-    <div id="splash-screen">
-        <div class="splash-content">
-            <img src="/icons/windows11/SplashScreen.scale-100.png" alt="App Logo" class="splash-logo">
-            <h1 class="splash-title">TODO List PWA</h1>
-        </div>
+    <div class="topo"></div>
+
+    <div class="pai-foto">
+      <div class="filho-foto"></div>
     </div>
 
-    <!-- conteudo principal do app -->
-    <div class="container my-5">
-        <h1 class="text-center">TODO List</h1>
-        <div class="input-group my-3">
-            <input type="text" id="new-task" class="form-control" placeholder="Nova tarefa">
-            <button id="add-task" class="btn btn-primary">Adicionar</button>
-        </div>
-        <ul id="task-list" class="list-group">
-            <!-- Tarefas aparecerão aqui -->
-        </ul>
-    </div>
+    <h2>Login:</h2>
+
+    <form action="/agenda.html">
+      <label for="login"></label>
+      <input type="text" id="login" name="login" placeholder="Email" ><br><br>
+
+      <label for="senha"></label>
+      <input type="password" id="senha" name="senha" placeholder="Senha" ><br><br>
+
+      <button type="submit">Entrar</button>
+    </form>
+    <br>
     
-    <!-- Modal para edição de tarefa -->
-    <div class="modal fade" id="editTaskModal" tabindex="-1" aria-labelledby="editTaskModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="editTaskModalLabel">Editar Tarefa</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <input type="text" id="edit-task-input" class="form-control" placeholder="Edite a tarefa">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" id="save-task-edit" class="btn btn-primary">Salvar</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    <a href="./cadastro.html">
+      <h2>Cadastre-se</h2>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-
-    <script src="js/app.js"></script>
+  </div>
 </body>
-
 </html>
