arrumando navegaçao e sw

--- a/agenda.html
+++ b/agenda.html
@@ -12,7 +12,7 @@
     <div class="container">
 
         <div class="topo">
-            <a href="./agenda.html">
+            <a href="/agenda.html">
                 <i class="fa-solid fa-arrow-left"></i>
                 </a>
                 <i class="fa-solid fa-bars"></i>
@@ -33,19 +33,19 @@
         <div class="risco"></div>
 
         <div class="agendamento">
-            <a href="./agendamento.html"><h2>Agendamentos</h2></a>
+            <a href="/agendamento.html"><h2>Agendamentos</h2></a>
         </div>
 
         <div class="cubo"></div>
 
         <div class="agendamento">
-            <a href="./home.html"><h2 class="a">Agenda</h2></a>
+            <a href="/home.html"><h2 class="a">Agenda</h2></a>
         </div>
 
         <div class="cubo"></div>
 
         <div class="agendamento">
-            <a href="./maquinas.html"><h2 class="m">Máquina</h2></a>
+            <a href="/maquinas.html"><h2 class="m">Máquina</h2></a>
         </div>
 
         <div class="cubo"></div>
