--- a/agendamento.html
+++ b/agendamento.html
@@ -12,7 +12,7 @@
     <div class="container">
 
         <div class="topo">
-            <a href="./agenda.html">
+            <a href="/agenda.html">
                 <i class="fa-solid fa-arrow-left"></i>
             </a>
             <i class="fa-solid fa-bars"></i>
