--- a/cadastro.html
+++ b/cadastro.html
@@ -11,7 +11,7 @@
     <div class="container">
 
         <div class="topo">
-            <a href="/index.html">
+            <a href="./index.html">
                 <i class="fa-solid fa-arrow-left"></i>
             </a>
             </i>    
