Alterações e estilizacões de paginas

--- a/index.html
+++ b/index.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lavapp</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <div class="container">
-
-    <div class="topo"></div>
-
-    <div class="pai-foto">
-      <div class="filho-foto"></div>
+    <div class="container">
+        <div class="logo-container">
+            <a href="login.html"><img src="./Group 49@2x.png" alt="Lavapp Logo" class="logo"></a>
+        </div>
+        <div class="bubbles">
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+        </div>
     </div>
-
-    <h2>Login:</h2>
-
-    <form action="/agenda.html">
-      <label for="login"></label>
-      <input type="text" id="login" name="login" placeholder="Email" ><br><br>
-
-      <label for="senha"></label>
-      <input type="password" id="senha" name="senha" placeholder="Senha" ><br><br>
-
-      <button type="submit">Entrar</button>
-    </form>
-    <br>
-    
-    <a href="./cadastro.html">
-      <h2>Cadastre-se</h2>
-
-  </div>
 </body>
 </html>
