ajuste em tela home e crianção da tela agenda

--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <a href="./agendamento.html"><h2 class="title">Meus agendamentos</h2></a>
+        <a href="./agendamento.html"><h2 class="sub-title">Meus agendamentos</h2></a>
 
         <div class="box">
             <div class="lavagem">
@@ -35,7 +35,7 @@
 
         </div>
 
-        <h3 class="sub-title">Agenda</h3> 
+        <a href="./agenda.html"><h3 class="sub-title">Agenda</h3> </a>
 
         <div class="box-agenda">
             <div class="agenda-lavadora">Agendar lavadora</div>
