--- a/agendamento.html
+++ b/agendamento.html
@@ -25,11 +25,11 @@
 
         <div class="box-container">
             <div class="item">
-                <span>07/09 - 12:30</span>
+                <span>03/09 - 09:30</span>
                 <i class="fa-regular fa-trash-can"onclick="showPopup()"></i>
               </div>
               <div class="item">
-                <span>07/09 - 12:30</span>
+                <span>05/09 - 18:00</span>
                 <i class="fa-regular fa-trash-can"onclick="showPopup()"></i>
               </div>
         </div>
@@ -38,6 +38,50 @@
             <div class="popup-content">
                 <p>Deseja cancelar o agendamento?</p>
                 <p><strong>07/09 12:30</strong></p>
+                <div class="popup-buttons">
+                    <button id="nao" class="btn-azul">Não</button>
+                    <button id="sim" class="btn-roxo">Sim</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="box-container">
+            <div class="item">
+                <span>07/09 - 12:30</span>
+                <i class="fa-regular fa-trash-can"onclick="showPopup()"></i>
+              </div>
+              <div class="item">
+                <span>10/09 - 10:00</span>
+                <i class="fa-regular fa-trash-can"onclick="showPopup()"></i>
+              </div>
+        </div>
+
+        <div id="popup" class="popup-container" style="display:none;">
+            <div class="popup-content">
+                <p>Deseja cancelar o agendamento?</p>
+                <p><strong>12/09 15:30</strong></p>
+                <div class="popup-buttons">
+                    <button id="nao" class="btn-azul">Não</button>
+                    <button id="sim" class="btn-roxo">Sim</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="box-container">
+            <div class="item">
+                <span>13/09 - 16:30</span>
+                <i class="fa-regular fa-trash-can"onclick="showPopup()"></i>
+              </div>
+              <div class="item">
+                <span>17/09 - 09:30</span>
+                <i class="fa-regular fa-trash-can"onclick="showPopup()"></i>
+              </div>
+        </div>
+
+        <div id="popup" class="popup-container" style="display:none;">
+            <div class="popup-content">
+                <p>Deseja cancelar o agendamento?</p>
+                <p><strong>17/09 12:00</strong></p>
                 <div class="popup-buttons">
                     <button id="nao" class="btn-azul">Não</button>
                     <button id="sim" class="btn-roxo">Sim</button>
