--- a/cadastro.html
+++ b/cadastro.html
@@ -12,7 +12,7 @@
 
         <div class="topo">
             <div class="icon">
-                <a href="./login.html"><i class="fa-solid fa-arrow-left"></i></a>
+                <!-- <a href="./login.html"><i class="fa-solid fa-arrow-left"></i></a> -->
             </div>
             <div class="title">
                 Cadastro
