--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lavapp</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div class="container">
@@ -24,5 +25,16 @@
             <div class="bubble"></div>
         </div>
     </div>
+    <script>
+        if ('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('service-worker.js')
+            .then(function(registration) {
+              console.log('Service Worker registrado com sucesso:', registration);
+            })
+            .catch(function(error) {
+              console.log('Falha ao registrar o Service Worker:', error);
+            });
+        }
+      </script>
 </body>
 </html>
